wrap around fix

--- a/app/assets/stylesheets/include_in_application.css/admin-master.css
+++ b/app/assets/stylesheets/include_in_application.css/admin-master.css
@@ -34,7 +34,11 @@
 
 /*************************************************************************************************************************************************/
 
-
+.admin_nav{
+	width: 960px;
+	height: 90px;
+	margin-top: 30px;
+}
 
 
 .blue ul{
